Update full github path to midi file

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <h2>Embedded MIDI Player</h2>
             <p>Listen to the example MIDI file:</p>
             <audio controls>
-                <source src="jingle_bells.mid" type="audio/midi">
+                <source src="https://github.com/msprague1/msprague1.github.io/blob/c0c016bc3d81155307d341549de261110f725b72/jingle_bells.mid" type="audio/midi">
                 Your browser does not support the audio element.
             </audio>
         </section>
