--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matthew Sprague's MIDI Generator</title>
-    <script src="https://cdn.jsdelivr.net/npm/@tonejs/midi@2.0.27/build/Midi.min.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -88,7 +87,7 @@
             <h2>Embedded MIDI Player</h2>
             <p>Listen to the example MIDI file:</p>
             <audio controls>
-                <source src="https://raw.githubusercontent.com/msprague1/msprague1.github.io/blob/master/jingle_bells.mid" type="audio/midi">
+                <source src="https://raw.githubusercontent.com/msprague1/msprague1.github.io/master/jingle_bells.mid" type="audio/midi">
                 Your browser does not support the audio element.
             </audio>
         </section>
