Updated to play mp3 instead of midi

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <h2>Embedded MIDI Player</h2>
             <p>Listen to the example MIDI file:</p>
             <audio controls>
-                <source src="https://raw.githubusercontent.com/msprague1/msprague1.github.io/master/jingle_bells.mid" type="audio/midi">
+                <source src="jingle_bells.mp3" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
         </section>
